Adicionado Botão de Copiar

--- a/gerador-cores/index.html
+++ b/gerador-cores/index.html
@@ -12,6 +12,7 @@
         <button id="btnGerar">Gerar Cor</button>
         <div id="corFundo" class="corFundo"></div>
         <p id="codigoCor"></p>
+        button <div id="btnCopiar">Copiar Código</div>
     </div>
     <script src="script.js"></script>
 </body>
