--- a/gerador-cores/index.html
+++ b/gerador-cores/index.html
@@ -12,7 +12,7 @@
         <button id="btnGerar">Gerar Cor</button>
         <div id="corFundo" class="corFundo"></div>
         <p id="codigoCor"></p>
-        button <div id="btnCopiar">Copiar Código</div>
+        <button id="btnCopiar">Copiar Código</button>
     </div>
     <script src="script.js"></script>
 </body>
