Um código mais limpo

--- a/gerador-cores/index.html
+++ b/gerador-cores/index.html
@@ -9,10 +9,10 @@
 <body>
     <div class="container">
         <h1>Gerador de Cores Aleatórias</h1>
-        <button id="btnGerar">Gerar Cor</button>
+        <button id="btnGerar" aria-label="Gerar uma nova cor aleatória">Gerar Cor</button>
         <div id="corFundo" class="corFundo"></div>
-        <p id="codigoCor"></p>
-        <button id="btnCopiar">Copiar Código</button>
+        <p id="codigoCor">Código da cor: </p>
+        <button id="btnCopiar" aria-label="Copiar o código da cor">Copiar Código</button>
     </div>
     <script src="script.js"></script>
 </body>
