--- a/gerador-cores/index.html
+++ b/gerador-cores/index.html
@@ -13,6 +13,8 @@
         <div id="corFundo" class="corFundo"></div>
         <p id="codigoCor">Código da cor: </p>
         <button id="btnCopiar" aria-label="Copiar o código da cor">Copiar Código</button>
+        <button id="btnFavoritar">Favoritar Cor</button>
+<ul id="listaFavoritos"></ul>
     </div>
     <script src="script.js"></script>
 </body>
